2011-04-16 Funda Wang <fwang@mandriva.org> 0.31.6
	* remove empty dirs for perl modules

2010 12-15 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.31.5
	* reenable xz --text (support were dropped by accident for xz 5.0)

2010-11-22 Funda Wang <fwang@mandriva.org> 0.31.4
	* xz 5.0 do not support '--text' option now.

2010-03-09 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.31.3
        * be sure to still strip files even if we're not building -debug
	  packages (fixing regression from 0.31.1)

2010-03-05 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.31.2
	* fix typo in macros file.. :/

2010-03-05 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.31.1
	* don't duplicate stripping already done in rpm's find-debuginfo.sh
	* rename strip_and_check_elf_files to check_elf_files
	  
2010-01-01 Guillaume Rousse <guillomovitch@mandriva.org> 0.31.0
	* replace gprintify python + shell implementation with a pure perl one
	* fix ${foo##*/} recognition in gprintify (mdv bug #56342)
	* enhance test suite with actual scripts usage

2009-11-21 Guillaume Rousse <guillomovitch@mandriva.org> 0.30.6
	* set LD_LIBRARY_PATH before calling ldd to check for 
	  missing or unused libs strip_and_check_elf_files (mdv bug #41522)

2009-06-25 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.30.5
	* fix EXCLUDE_FROM_STRIP issue dealing with more than just one pattern,
	  which would result in files being stripped even when they should've
	  been excluded (cause of mdv bug #51374)

2009-05-14 Guillaume Rousse <guillomovitch@mandriva.org> 0.30.4
	* skip PDF files when fixing end of lines (mdv bug #51128)
	* initial test suite
	* make all helper abort for missing or incorrect build root

2009-05-14 Michael Scherer <misc@mandriva.org> 0.30.3
	* fix missing compression on manpages (mdv bug #50803)

2009-05-09 Guillaume Rousse <guillomovitch@mandriva.org> 0.30.2
	* drop man page normalization, broken, and uneeded anymore
	* drop hardlink handling in man page compression